# data-struct

./: .gitignore  CMakeTemplate.txt  README.md
LinearTable/linked_list/: CMakeLists.txt  README.md  linked_list.hpp  main.cpp  test_shared_ptr.cpp
LinearTable/list/: CMakeLists.txt  list.c  list.h  list_main.c
LinearTable/pattern_matching/: CMakeLists.txt  README.md  main.cpp
LinearTable/pattern_matching/chilib/: pattern_matching.hpp
LinearTable/test/: binding.c  flag.c  own.c
Tree/AVL/: CMakeLists.txt  main.cpp  type_test.cpp
Tree/AVL/chilib/: chivector.hpp  linked_edges.hpp  linked_list.hpp  queue.hpp  tree.hpp
Tree/BinaryTree/: CMakeLists.txt  P1305.cpp  main.cpp
Tree/BinaryTree/chilib/: btree.hpp  chistring.hpp  chivector.hpp  iterator_base.hpp  linked_list.hpp
docs/: 实验总体说明.docx
ex1/: 200110619_梁鑫嵘_实验1 - 副本.docx  200110619_梁鑫嵘_实验1.docx  ~$0110619_梁鑫嵘_实验1.docx  问题描述.md
ex1/codeblocks/: codeblocks.cbp  codeblocks.depend  codeblocks.layout  linked_list.hpp
ex1/src/: gradeImport.cpp
ex2/: ex2.md
ex2/src/: main.c  queue.h  test_stu.out
ex2/实验2/lab2_stu/: lab2_stu.cbp  stack.c  stack.h
experiments/ex1/: temp.docx  temp.md
experiments/ex1/codeblocks/: codeblocks.cbp  codeblocks.depend
experiments/ex1/src/: CMakeLists.txt  chistring.hpp  gradeImport.cpp  gradeImport.in  gradeImport.out.sample  linked_list.hpp
experiments/ex1/src/chilib/: chistring.hpp
experiments/ex1/实验1/: myout.out
experiments/ex1_2/: 实验1_200110619_梁鑫嵘.docx  文档.md  问题描述.md
experiments/ex1_2/codeblocks/: codeblocks.cbp  codeblocks.depend  codeblocks.layout
experiments/ex1_2/src/: CMakeLists.txt  gradeImport.cpp
experiments/ex1_2/src/chilib/: chistring.hpp  iterator_base.hpp  linked_list.hpp
experiments/ex1_2/实验1/: gradeImport.c  实验一任务说明.docx
experiments/ex2/: 实验2_200110619_梁鑫嵘.docx
experiments/ex2/codeblocks/: codeblocks.cbp  codeblocks.depend  test_stu.in
experiments/ex2/src/: CMakeLists.txt  queue.c  stack.c  stack.h  utils.h
experiments/ex2/实验2/: README.txt  实验二任务说明.docx
experiments/ex2/实验2/lab2_stu/: lab2_stu.depend  lab2_stu.layout  main.c  queue.c  queue.h  test_stu.out
experiments/ex3/: 200110619-梁鑫嵘-实验3.docx  ex3.md  myres.txt
experiments/ex3/codeblocks/: codeblocks.cbp  codeblocks.depend  codeblocks.layout  invert_tree_0.dot  invert_tree_1.dot  invert_tree_2.dot  invert_tree_3.dot  tree_1.dot  tree_2.dot  tree_3.dot
experiments/ex3/src/: CMakeLists.txt  check.cmd  invert_tree_1.dot  invert_tree_2.dot  invert_tree_3.dot  main.cpp  myres.txt  result.txt  test.cpp  tree_0.dot  tree_1.dot  tree_2.dot  tree_3.dot
experiments/ex3/src/chilib/: btree.hpp  chistring.hpp  chivector.hpp  iterator_base.hpp  linked_list.hpp
experiments/ex3/src/tools/: check.cmd  im.txt
experiments/ex3/实验三/: ~$实验三任务说明.pptx  ~$验三任务说明.docx  实验三任务说明.docx  实验三任务说明.pptx  数据结构-实验报告模板.docx
experiments/ex3/实验三/学生代码/: main.c  test.txt
experiments/ex4/: 200110619-梁鑫嵘-实验4.md
experiments/ex4/codeblocks/: codeblocks.cbp
experiments/ex4/codeblocks_task1/: codeblocks.cbp  codeblocks.layout  stu.in  stu.out
experiments/ex4/codeblocks_task2/: codeblocks.cbp  codeblocks.depend  codeblocks.layout
experiments/ex4/docs/: 200110619-梁鑫嵘-实验4-cover.docx  200110619-梁鑫嵘-实验4-final.md  200110619-梁鑫嵘-实验4.md
experiments/ex4/src/: CMakeLists.txt  dijk.cpp  linked_edges_test.cpp  m.txt  main.c  metro.cpp  out.dot  pq_test.cpp  utf8.py
experiments/ex4/src/chilib/: btree.hpp  chivector.hpp  linked_edges.hpp  queue.hpp
experiments/ex4/实验四/: main.c  metro.txt  no2metro.txt  ~$验四任务说明.docx  实验四任务说明.docx  实验四任务说明.pptx  数据结构-实验报告模板.docx
experiments/ex5/codeblocks/task1/: 5_1_output_5.out  task1.cbp  task1.depend  task1.layout
experiments/ex5/codeblocks/task2/: 5_2_output_5.out  task2.cbp
experiments/ex5/codeblocks/task3/: task3.cbp  task3.layout
experiments/ex5/docs/: 200110619-梁鑫嵘-实验5.md
experiments/ex5/src/: CMakeLists.txt  map_test.cpp  task1.c  task2.cpp  task3.cpp  task3_.cpp  task3__.cpp
experiments/ex5/src/chilib/: algo.hpp  chimap.hpp  chistring.hpp  linked_edges.hpp  linked_list.hpp  queue.hpp  tree.hpp
experiments/ex5/src/resource/: 5_1_input_5.in  5_2_input_5.in
experiments/ex5/数据结构实验5_学生部分/: ~$验五任务说明.docx  实验五任务说明.docx  实验五任务说明.pptx  数据结构-实验报告模板.docx
experiments/ex5/数据结构实验5_学生部分/学生代码/: 5_1_stu.c  5_2_stu.c  5_3.c  5_3_input.in  5_3_output.out
homework/hw1/: hw1.1.c  hw1.2.c  hw1.md
homework/hw2/: 200110619-梁鑫嵘-作业2.md  hw2_1.c  hw2_2.cpp  hw2_3.cpp  hw2_4.cpp  test.c  第2次作业树型结构.docx
homework/hw3/: 2-1-1.cpp  2-1.cpp  200110619-梁鑫嵘-作业3.md  2_1_2.c  CMakeLists.txt
homework/hw4/: 200110619-梁鑫嵘-作业4.md
homework/hw4/code/cmake/: test.cpp
homework/hw4/code/cmake/chilib/: algo.hpp  chimap.hpp  chistring.hpp  chivector.hpp  iterator_base.hpp  queue.hpp
homework/hw4/code/cpp/: main.cpp
notes/: notes.md
notes/test_code/: code01.c  code02.c
